<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/TableD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        android:hint="@string/Tabella"
        android:inputType="text"
        />
    <EditText
        android:id = "@+id/RadiusD"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:hint = "@string/Radius"
        android:focusable="true"
        android:enabled="true"
        android:inputType = "numberDecimal"
        />

    <Button
        android:id="@+id/InvioD"
        style="@style/CustomButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:focusable="false"
        android:text="@string/Invio" />

    <TextView
        android:id="@+id/ShowClustersD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3.5dp"
        android:layout_marginTop="-5dp"
        android:layout_marginRight="3.5dp"
        android:layout_marginBottom="-1dp"
        android:background="#6068BBFC"
        android:scrollbars="vertical"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textSize="15sp"
        android:visibility="visible" />
</LinearLayout>